# vrec

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  disk_stat.rs  main.rs  recorder.rs  web.rs
src/web/: app.rs  helpers.rs  services.rs
templates/: download.hbs  index.hbs  job.hbs  jobs.hbs  layout.hbs
