[package]
name = "vrec"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["Tomoki Aonuma <uasi@uasi.jp>"]
license = "Apache-2.0"

[dependencies]
actix-files = "^0.1.0"
actix-web = "^1.0.0-rc"
dotenv = "^0.13.0"
mime_guess = "^2.0.0-alpha.6"
handlebars = "^1.1.0"
libc = "^0.2.50"
linkify = "^0.3.1"
listenfd = "^0.3.3"
mime = "^0.3.13"
serde = { version = "^1.0.89", features = ["derive"] }
serde_json = "^1.0.39"
signal-hook = "^0.1.8"
ulid = "^0.3.1"
url = "^1.7.2"
