[package]
name = "vrec"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["Tomoki Aonuma <uasi@uasi.jp>"]
license = "Apache-2.0"

[dependencies]
actix-files = "^0.2.1"
actix-rt = "^1.0.0"
actix-web = "^2.0.0"
dotenv = "^0.15.0"
mime_guess = "^2.0.1"
handlebars = "^2.0.2"
libc = "^0.2.58"
linkify = "^0.4.0"
listenfd = "^0.3.3"
mime = "^0.3.13"
percent-encoding = "^2.1.0"
serde = { version = "^1.0.92", features = ["derive"] }
serde_json = "^1.0.39"
signal-hook = "^0.1.9"
ulid = "^0.3.1"
url = "^2.1.0"
