[package]
name = "vrec"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["Tomoki Aonuma <uasi@uasi.jp>"]
license = "Apache-2.0"

[dependencies]
actix-files = "0.4.0"
actix-rt = "1.1.1"
actix-web = "3.2.0"
dotenv = "0.15.0"
mime_guess = "2.0.3"
handlebars = { version = "3.5.1", features = ["dir_source"] }
libc = "0.2.80"
linkify = "0.4.0"
listenfd = "0.3.3"
mime = "0.3.16"
percent-encoding = "2.1.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
signal-hook = "0.1.16"
ulid = "0.4.1"
url = "2.2.0"
